# chat-example

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.dev.yml  package.json  tsconfig.json
assets/ts/: main.ts
migrations/: 2026030300000_create_users_table.sql
src/: config.rs  error.rs  main.rs  router.rs  startup.rs
src/controller/: home.rs  login.rs  register.rs
src/middleware/: auth.rs
src/model/: api.rs  app.rs  mod.rs  user.rs
src/model/session/: user.rs
templates/: base.html  index.html  index_content.html
templates/components/: button.html  card.html  form.html  message.html
templates/login/: form.html  index.html  index_content.html
templates/register/: form.html  index.html  index_content.html
